tests/exceptions/output/diagnose/syntax_error.txt

[33m[1mTraceback (most recent call last):[m

  File "[32mtests/exceptions/diagnose/[m[32m[1msyntax_error.py[m", line [33m16[m, in [35m<module>[m
    [38;5;155mexec[0m[38;5;231m([0m[38;5;231mcode[0m[38;5;231m)[0m
    [36m     └ [m[36m[1m'\nif True:\n    a = 5\n    b = 7 *\n'[m

  File "[32m[m[32m[1m<string>[m, line [33m4
[m    [38;5;231mb[0m [38;5;197m=[0m [38;5;141m7[0m [38;5;197m*[0m
          ^

[31m[1mSyntaxError[m:[1m invalid syntax[m
